[workspace]
resolver = "2"
members = [
    "cvlr-solana",
    "cvlr-solana-token",
    "cvlr-solana-stake"
]

[workspace.package]
version = "0.5.0"
authors = [
    "Arie Gurfinkel <arie@certora.com>",
    "Jorge A. Navas <jorge@certora.com>",
    "Francesco Parolini <francesco@certora.com>",
]
edition = "2021"
description = "Certora Verification Language for Rust with Solana"
documentation = "https://docs.rs/cvlr/latest"
license = "MIT"
keywords = [
    "certora", 
    "assert", 
    "solana", 
    "verification", 
    "formal-methods",
]
categories = [
    "development-tools::debugging", 
    "development-tools::testing", 
    "no-std"
]
readme = "README.md"
homepage = "https://www.certora.com"
repository = "https://github.com/Certora/cvlr-solana"


[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
macrotest = "1"
trybuild = "1"
borsh = "1.5"

cvlr-asserts = { version=">= 0.4.0, <1" }
cvlr-mathint = { version=">= 0.4.0, <1" }
cvlr-nondet = { version=">= 0.4.0, <1" }
cvlr-log = { version=">= 0.4.0, <1" }
cvlr-early-panic = { version=">= 0.4.0, <1" }
cvlr-solana = { path = "cvlr-solana", version = "=0.5.0"}
cvlr-macros = { version=">= 0.4.0, <1" }
