[package]
name = "cvlr-solana-stake"
description =  "CVLR model for the Solana Stake Program"
version.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
rt = ["cvlr-nondet/rt", "cvlr-asserts/rt", "cvlr-mathint/rt"]

[dependencies]
solana-program = ">=2.1"
arrayref = "0.3"
borsh = { workspace = true }
solana-stake-interface = "1.2.1"


cvlr-asserts = { workspace = true }
cvlr-nondet = { workspace = true }
cvlr-mathint = { workspace = true }
cvlr-log = { workspace = true }
cvlr-early-panic = { workspace = true }
cvlr-solana = { workspace = true }



